@@ -197,12 +197,14 @@
         </executions>
       </plugin>
 
-      <!-- Filter out functional and FEST UI tests by Maven (an IDE will run all tests including functional) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.16</version>
         <configuration>
+          <!-- Provide extra memory to reduce excessive threads being allocated during testing -->
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <!-- Filter out functional and FEST UI tests by Maven (an IDE will run all tests including functional) -->
           <excludes>
             <exclude>**/*FunctionalTest.java</exclude>
             <exclude>**/*MultiBitHDFestTest.java</exclude>
@@ -283,10 +285,10 @@
     <version>2.0.1</version>
   </dependency>
 
-  <!-- Crypto -->
+  <!-- Crypto to match Bitcoinj -->
   <dependency>
     <groupId>com.madgag.spongycastle</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>pg</artifactId>
     <version>1.51.0.0</version>
   </dependency>
 
